--- a/modules/_form.sass
+++ b/modules/_form.sass
@@ -1,20 +1,40 @@
+// Example:
+// .scaffold
+//   +form($color-accent, 1px solid #eee, $break-point)
+//   padding-top: 20px
+//   .actions
+//     input[type=submit]
+//       +button(14px, $color-accent)
+//       min-width: 200px
+
 =form($_color-accent: #ffa500, $_border: 1px solid #eee, $_break-point: 640px)
   +font(14px)
   @at-root
+    #{&}__title
+      +inline-block
+      font-weight: bold
+      border-bottom: 2px solid $color-def
+      margin-bottom: 10px
     #{&}__description
       margin: 30px 0 30px 0
-    #{&}__set
+    #{&}__set, .field, .actions
       +clearfix
       position: relative
-      margin: 0 0 5px 0
+      margin-top: 10px
       padding: 0 15px 5px 0
-    #{&}__set-label
-      width: 20%
-      float: left
-      margin-top: 5px
-    #{&}__set-body
-      width: 75%
-      float: right
+      padding-left: 140px
+      > label
+        position: absolute
+        left: 0px
+        width: 120px
+      > .text
+        width: 60%
+        height: 20px
+        overflow: hidden
+        resize: none
+      > textarea
+        width: 100%
+        height: 200px
 
     input[type=text],
     input[type=email],
@@ -46,16 +66,15 @@
       cursor: pointer
 
     @media screen and (max-width: $_break-point)
-      #{&}__set
+      #{&}__set, .field, .actions
         margin: 0 0 10px 0
-      #{&}__set-label
-        width: 100%
-        float: none
-        margin: 0 0 5px 0
-        display: block
-      #{&}__set-body
-        width: 100%
-        float: none
+        padding-left: 0
+        > label
+          position: relative
+          display: block
+        > .text,
+        > textarea
+          width: 100%
 
       input[type=text],
       input[type=email],
