--- a/modules/_form.sass
+++ b/modules/_form.sass
@@ -10,20 +10,22 @@
 =form($_color-accent: #ffa500, $_border: 1px solid #eee, $_break-point: 640px)
   +font(14px)
   @at-root
-    #{&}__title
-      +inline-block
-      font-weight: bold
-      border-bottom: 2px solid $color-def
-      margin-bottom: 10px
     #{&}__description
       margin: 30px 0 30px 0
-    #{&}__set, .field, .actions
+    #{&}__list
+      > li
+        margin-top: 4px
+        &:first-child
+          margin-top: 0
+        > label
+          margin-left: 6px
+    #{&}__field, .field, .actions
       +clearfix
       position: relative
       margin-top: 10px
       padding: 0 15px 5px 0
       padding-left: 140px
-      > label
+      > label, > legend
         position: absolute
         left: 0px
         width: 120px
@@ -66,10 +68,10 @@
       cursor: pointer
 
     @media screen and (max-width: $_break-point)
-      #{&}__set, .field, .actions
+      #{&}__field, .field, .actions
         margin: 0 0 10px 0
         padding-left: 0
-        > label
+        > label, > legend
           position: relative
           display: block
         > .text,
