--- a/_helpers.sass
+++ b/_helpers.sass
@@ -1,6 +1,7 @@
 //addons
 @import "vendor/spuit/addons/_timing-functions"
 @import "vendor/spuit/addons/_timing-functions-elastic"
+@import "vendor/spuit/addons/_strip-unit"
 
 //like compass
 @import "vendor/spuit/helpers/_prefix"
