--- a/_helpers.sass
+++ b/_helpers.sass
@@ -16,6 +16,7 @@
 @import "vendor/spuit/helpers/_appearance"
 @import "vendor/spuit/helpers/_text-shadow"
 @import "vendor/spuit/helpers/_background-image"
+@import "vendor/spuit/helpers/_break-points"
 
 //spuit mixins
 @import "vendor/spuit/helpers/_font"
