--- a/_modules.sass
+++ b/_modules.sass
@@ -7,3 +7,4 @@
 @import "vendor/spuit/modules/_markdown"
 @import "vendor/spuit/modules/_meta"
 @import "vendor/spuit/modules/_tri"
+@import "vendor/spuit/modules/_icon"
