--- a/_helpers.sass
+++ b/_helpers.sass
@@ -31,6 +31,8 @@
 @import "vendor/spuit/helpers/_split"
 @import "vendor/spuit/helpers/_wrap-center"
 @import "vendor/spuit/helpers/_wrap"
+@import "vendor/spuit/helpers/_fade-bottom"
+@import "vendor/spuit/helpers/_icon"
 
 @import "vendor/spuit/helpers/_button-base"
 
