--- a/helpers/_fade-bottom.sass
+++ b/helpers/_fade-bottom.sass
@@ -1,4 +1,4 @@
-=fade-bottom($h: 40px, $m: 10px, $c: #fff)
+=wordwrap-fadeout($h: 40px, $m: 10px, $c: #fff)
   position: relative
   overflow: hidden
   &:before
