--- a/modules/_form.sass
+++ b/modules/_form.sass
@@ -73,6 +73,8 @@
         > label, > legend
           position: relative
           display: block
+          width: auto
+          padding-bottom: 4px
         > .text,
         > textarea
           width: 100%
