--- a/modules/_gist.sass
+++ b/modules/_gist.sass
@@ -1,7 +1,6 @@
-$_contents-width: 500px
-$_break-point: 500px
-
-.gist
+=gist
+  $_contents-width: 960px
+  $_break-point: 640px
   $_ml: 100px
   width: auto !important
   margin-left: -$_ml !important
