--- a/addons/_timing-functions-elastic.sass
+++ b/addons/_timing-functions-elastic.sass
@@ -1,3 +1,3 @@
-// mock elastic
+// similar elastic
 $ease-out-elastic: cubic-bezier(0.370, 1.650, 0.410, 0.780)
 $ease-in-elastic: cubic-bezier(0.370, 0.650, 0.410, -0.780)
