--- a/mixins/_font.sass
+++ b/mixins/_font.sass
@@ -51,6 +51,12 @@ $sans: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Mei
   @at-root
     @import url('http://fonts.googleapis.com/css?family=Gilda+Display')
 
+// +import-montserrat
+// font-family: 'Montserrat', $sans
+=import-montserrat($size: 1em, $line-height: normal, $weight: normal)
+  @at-root
+    @import '//fonts.googleapis.com/css?family=Montserrat'
+
 // +import-fa
 =import-fa
   @at-root
