--- a/_all.sass
+++ b/_all.sass
@@ -26,6 +26,7 @@
 @import "vendor/spuit/modules/_gist"
 @import "vendor/spuit/modules/_markdown"
 @import "vendor/spuit/modules/_meta"
+@import "vendor/spuit/modules/_scaffold"
 @import "vendor/spuit/modules/_tri"
 @import "vendor/spuit/modules/_icon"
 @import "vendor/spuit/modules/_footer-fixed"
