--- a/_min.sass
+++ b/_min.sass
@@ -21,6 +21,7 @@
 @import "vendor/spuit/substitute/_transition"
 
 //spuit
+@import "vendor/spuit/mixins/_anim"
 @import "vendor/spuit/mixins/_blur"
 @import "vendor/spuit/mixins/_button-base"
 @import "vendor/spuit/mixins/_fa"
