--- a/modules/_form.sass
+++ b/modules/_form.sass
@@ -41,6 +41,7 @@
     input[type=email],
     input[type=url],
     input[type=password],
+    input[type=number],
     textarea
       +font(14px)
       width: auto
