--- a/_min.sass
+++ b/_min.sass
@@ -22,6 +22,7 @@
 
 //spuit
 @import "vendor/spuit/mixins/_anim"
+@import "vendor/spuit/mixins/_backface-visibility"
 @import "vendor/spuit/mixins/_blur"
 @import "vendor/spuit/mixins/_button-base"
 @import "vendor/spuit/mixins/_fa"
