--- a/modules/_scaffold.sass
+++ b/modules/_scaffold.sass
@@ -6,6 +6,9 @@
     margin-top: 30px
     width: 100%
     +table-frame
+    th
+      +font(10px, normal, bold)
+      text-align: center
     td
       > a
         +a-link-arrow
