--- a/_all.sass
+++ b/_all.sass
@@ -22,6 +22,7 @@
 @import "vendor/spuit/modules/_badge"
 @import "vendor/spuit/modules/_body"
 @import "vendor/spuit/modules/_button"
+@import "vendor/spuit/modules/_chat"
 @import "vendor/spuit/modules/_form"
 @import "vendor/spuit/modules/_gist"
 @import "vendor/spuit/modules/_markdown"
