--- a/modules/_pulldown.sass
+++ b/modules/_pulldown.sass
@@ -74,7 +74,7 @@
       background: transparent
       width: auto
       border-left: 2px solid #222
-      margin-left: 10px
+      padding-left: 10px
       > li
         border-top: none
       a
