--- a/modules/_chat.sass
+++ b/modules/_chat.sass
@@ -36,6 +36,7 @@
       +border-radius($r)
       +tri(nth($colors, 1), 12px, $w/2, 0, 'left')
       +font(14px, 1.6em)
+      overflow: hidden
       background: nth($colors, 1)
       padding: 18px
       color: #fff
