--- a/mixins/_anim.sass
+++ b/mixins/_anim.sass
@@ -16,3 +16,9 @@
   100%
     +scale(1)
 
+// +animation(anim-spin 1.6s infinite linear)
++keyframes(anim-spin)
+  0%
+    +rotate(0deg)
+  100%
+    +rotate(360deg)
