--- a/mixins/_reset-form.sass
+++ b/mixins/_reset-form.sass
@@ -1,6 +1,6 @@
 =reset-form($c: transparent)
   +appearance(none)
-  +background-gradient(linear, $c, $c)
+  +background-image(linear-gradient($c, $c))
   border: none
   outline: none
   margin: 0
