--- a/modules/_body.sass
+++ b/modules/_body.sass
@@ -97,10 +97,11 @@
     margin-bottom: $_margin-contents-bottom
     li
       +font(14px)
-      padding-top: 5px
+      padding-top: 2px
       padding-bottom: 5px
       list-style-type: disc
-
+      a
+        +font(14px)
   ol
     margin-bottom: $_margin-contents-bottom
     li
