--- a/_all.sass
+++ b/_all.sass
@@ -29,6 +29,7 @@
 @import "vendor/spuit/modules/_meta"
 @import "vendor/spuit/modules/_pulldown"
 @import "vendor/spuit/modules/_scaffold"
+@import "vendor/spuit/modules/_searchbox"
 @import "vendor/spuit/modules/_tri"
 @import "vendor/spuit/modules/_icon"
 @import "vendor/spuit/modules/_footer-fixed"
