--- a/modules/_scaffold.sass
+++ b/modules/_scaffold.sass
@@ -59,6 +59,7 @@
     margin-top: 20px
     margin-bottom: 20px
     text-align: center
+    span.gap,
     span.current,
     a
       +inline-block
@@ -68,6 +69,10 @@
       padding: 5px
       text-align: center
       color: $color-accent
+    span.gap
+      color: #222
+      +hide-text
+      width: 20px
     span.current
       +font(14px, normal, bold)
       color: #222
