--- a/mixins/_split.sass
+++ b/mixins/_split.sass
@@ -25,9 +25,9 @@
       @if $i >= $column
         &:nth-child(#{$i})
           margin-bottom: $gutter * 1%
-  @media screen and (max-width: $break-point)
-    > li
-      width: auto
-      float: none
-      margin: 0
+  // @media screen and (max-width: $break-point)
+  //   > li
+  //     width: auto
+  //     float: none
+  //     margin: 0
 
