--- a/mixins/_vertical-align.sass
+++ b/mixins/_vertical-align.sass
@@ -1,5 +1,6 @@
 =vertical-align($pos: absolute, $x: 50%, $y: 50%)
-  +translate3d(-$x, -$y)
+  // +translate3d(-$x, -$y)
+  +transform(translateX(-$x) translateY(-$y))
   position: $pos
   top: $y
   left: $x
