--- a/modules/_wordwrap-fadeout.sass
+++ b/modules/_wordwrap-fadeout.sass
@@ -7,13 +7,13 @@
     bottom: 0
     left: 0
     width: 100%
-    height: 10px
+    height: $m
     background: $c
   &:after
     +background-image(linear-gradient(to top, rgba($c,1), rgba($c,0)))
     content: ''
     position: absolute
-    bottom: 10px
+    bottom: $m
     left: 0
     width: 100%
     height: $h
