--- a/_min.sass
+++ b/_min.sass
@@ -7,6 +7,7 @@
 @import "vendor/spuit/substitute/_background-image"
 @import "vendor/spuit/substitute/_border-radius"
 @import "vendor/spuit/substitute/_box-shadow"
+@import "vendor/spuit/substitute/_box-sizing"
 @import "vendor/spuit/substitute/_break-points"
 @import "vendor/spuit/substitute/_clearfix"
 @import "vendor/spuit/substitute/_hide-text"
