--- a/_min.sass
+++ b/_min.sass
@@ -21,8 +21,12 @@
 @import "vendor/spuit/substitute/_transform"
 @import "vendor/spuit/substitute/_transition"
 
-//spuit
-@import "vendor/spuit/mixins/_anim"
+//spuit helpers
+@import "vendor/spuit/helpers/_position"
+@import "vendor/spuit/helpers/_rect"
+@import "vendor/spuit/helpers/_circle"
+
+//spuit others
 @import "vendor/spuit/mixins/_backface-visibility"
 @import "vendor/spuit/mixins/_blur"
 @import "vendor/spuit/mixins/_button-base"
