--- a/elements/_h.sass
+++ b/elements/_h.sass
@@ -21,3 +21,16 @@
     content: ""
     flex-grow: 1
     margin-left: 0.5em
+
+=h-shoulder
+  +clearfix
+  position: relative
+  > span
+    +inline-block
+    float: right
+    ul
+      +ul-floats
+    a
+      +fa-icon
+      text-decoration: none
+
