--- a/_all.sass
+++ b/_all.sass
@@ -4,9 +4,14 @@
 
 @import "vendor/spuit/min"
 
-//addons
-@import "vendor/spuit/addons/_timing-functions"
-@import "vendor/spuit/addons/_timing-functions-elastic"
+//outputs
+@import "vendor/spuit/at-roots/_margin"
+
+//spuit effects
+@import "vendor/spuit/effects/_animation-patterns"
+@import "vendor/spuit/effects/_blur"
+@import "vendor/spuit/effects/_timing-functions"
+@import "vendor/spuit/effects/_timing-functions-elastic"
 
 // elements
 @import "vendor/spuit/elements/_a"
@@ -14,7 +19,6 @@
 @import "vendor/spuit/elements/_dl"
 @import "vendor/spuit/elements/_h"
 @import "vendor/spuit/elements/_hr"
-@import "vendor/spuit/elements/_margin"
 @import "vendor/spuit/elements/_table"
 @import "vendor/spuit/elements/_ul"
 
@@ -34,6 +38,12 @@
 @import "vendor/spuit/modules/_icon"
 @import "vendor/spuit/modules/_footer-fixed"
 @import "vendor/spuit/modules/_wordwrap-fadeout"
+
+//spuit shortcuts
+@import "vendor/spuit/shortcuts/_position"
+@import "vendor/spuit/shortcuts/_rect"
+@import "vendor/spuit/shortcuts/_circle"
+@import "vendor/spuit/shortcuts/_border-box"
 
 
 
