--- a/_min.sass
+++ b/_min.sass
@@ -1,34 +1,28 @@
-//addons
-@import "vendor/spuit/addons/_strip-unit"
+//functions
+@import "vendor/spuit/functions/_strip-unit"
 
-//substitute (compass, bourbon, ...)
-@import "vendor/spuit/substitute/_animation"
-@import "vendor/spuit/substitute/_appearance"
-@import "vendor/spuit/substitute/_background-image"
-@import "vendor/spuit/substitute/_border-radius"
-@import "vendor/spuit/substitute/_box-shadow"
-@import "vendor/spuit/substitute/_box-sizing"
-@import "vendor/spuit/substitute/_break-points"
-@import "vendor/spuit/substitute/_clearfix"
-@import "vendor/spuit/substitute/_hide-text"
-@import "vendor/spuit/substitute/_inline-block"
-@import "vendor/spuit/substitute/_linear-gradient"
-@import "vendor/spuit/substitute/_nowrap"
-@import "vendor/spuit/substitute/_opacity"
-@import "vendor/spuit/substitute/_prefix"
-@import "vendor/spuit/substitute/_selection"
-@import "vendor/spuit/substitute/_text-shadow"
-@import "vendor/spuit/substitute/_transform"
-@import "vendor/spuit/substitute/_transition"
-
-//spuit helpers
-@import "vendor/spuit/helpers/_position"
-@import "vendor/spuit/helpers/_rect"
-@import "vendor/spuit/helpers/_circle"
+//clones (compass, bourbon, ...)
+@import "vendor/spuit/clones/_animation"
+@import "vendor/spuit/clones/_appearance"
+@import "vendor/spuit/clones/_backface-visibility"
+@import "vendor/spuit/clones/_background-image"
+@import "vendor/spuit/clones/_border-radius"
+@import "vendor/spuit/clones/_box-shadow"
+@import "vendor/spuit/clones/_box-sizing"
+@import "vendor/spuit/clones/_break-points"
+@import "vendor/spuit/clones/_clearfix"
+@import "vendor/spuit/clones/_hide-text"
+@import "vendor/spuit/clones/_inline-block"
+@import "vendor/spuit/clones/_linear-gradient"
+@import "vendor/spuit/clones/_nowrap"
+@import "vendor/spuit/clones/_opacity"
+@import "vendor/spuit/clones/_prefix"
+@import "vendor/spuit/clones/_selection"
+@import "vendor/spuit/clones/_text-shadow"
+@import "vendor/spuit/clones/_transform"
+@import "vendor/spuit/clones/_transition"
 
 //spuit others
-@import "vendor/spuit/mixins/_backface-visibility"
-@import "vendor/spuit/mixins/_blur"
 @import "vendor/spuit/mixins/_button-base"
 @import "vendor/spuit/mixins/_fa"
 @import "vendor/spuit/mixins/_font-face"
