--- a/_all.sass
+++ b/_all.sass
@@ -19,8 +19,10 @@
 @import "vendor/spuit/elements/_dl"
 @import "vendor/spuit/elements/_h"
 @import "vendor/spuit/elements/_hr"
+@import "vendor/spuit/elements/_radio"
 @import "vendor/spuit/elements/_table"
 @import "vendor/spuit/elements/_ul"
+@import "vendor/spuit/elements/_select"
 
 // modules
 @import "vendor/spuit/modules/_badge"
