--- a/modules/_button.sass
+++ b/modules/_button.sass
@@ -44,7 +44,7 @@
     background: darken($c, $strangth)
     +background-image(linear-gradient(to top, darken($c, $strangth), $c))
 
-=button-border($size: 14px, $c: #ffa500, $p: 10px 20px, $border: 2px, $r: 0px)
+=button-border($size: 14px, $c: #ffa500, $c-text: #fff, $p: 10px 20px, $border: 2px, $r: 0px)
   +button-base
   +border-radius($r)
   +transition(background-color 0.2s ease-out)
@@ -55,7 +55,7 @@
   color: $c
   &:hover
     background-color: $c
-    color: #fff
+    color: $c-text
     border-color: transparet
   &:active
     background-color: darken($c, 10%)
