--- a/effects/_animation-patterns.sass
+++ b/effects/_animation-patterns.sass
@@ -7,6 +7,15 @@
   100%
     +translateX(0%)
 
+// +animation(anim-float 0.8s ease-out infinite)
++keyframes(anim-float)
+  0%
+    +translateY(0%)
+  50%
+    +translateY(20%)
+  100%
+    +translateY(0%)
+
 // +animation(anim-scale 0.8s ease-out)
 +keyframes(anim-scale)
   0%
