--- a/mixins/_fa.sass
+++ b/mixins/_fa.sass
@@ -39,6 +39,7 @@
       top: $top
 
 =fa-replace($icon: '\f105', $w: 60px, $size: 1em, $round: true)
+  +inline-block
   +hide-text
   @if $round == true
     +border-radius(60px)
