--- a/modules/_form.sass
+++ b/modules/_form.sass
@@ -8,6 +8,47 @@
 
 =form($_color-accent: #ffa500, $_border: 1px solid #eee, $_left-margin: 120px, $_break-point: 640px)
   +font(14px)
+
+  input[type=text],
+  input[type=email],
+  input[type=url],
+  input[type=password],
+  input[type=number],
+  textarea
+    +font(14px)
+    width: auto
+    line-height: normal
+    border: $_border
+    padding: 10px
+    +placeholder
+      +font(14px)
+      color: #ddd
+  input[type=text],
+  input[type=email],
+  input[type=url],
+  input[type=password]
+    width: 50%
+  input[type=text]:focus,
+  input[type=email]:focus,
+  input[type=url]:focus,
+  input[type=password]:focus,
+  textarea:focus
+    outline: 0
+    border-color: $_color-accent
+  input[type=radio], input[type=radio] + label,
+  input[type=checkbox], input[type=checkbox] + label
+    cursor: pointer
+  @media screen and (max-width: $_break-point)
+    input[type=text],
+    input[type=email],
+    input[type=url],
+    input[type=password],
+    textarea
+      +background-image(linear-gradient(to top, white, white))
+      width: 100%
+    textarea
+      height: 100px
+
   @at-root
     #{&}__description
       margin: 30px 0 30px 0
@@ -37,36 +78,6 @@
         width: 100%
         height: 200px
 
-    input[type=text],
-    input[type=email],
-    input[type=url],
-    input[type=password],
-    input[type=number],
-    textarea
-      +font(14px)
-      width: auto
-      line-height: normal
-      border: $_border
-      padding: 10px
-      +placeholder
-        +font(14px)
-        color: #ddd
-    input[type=text],
-    input[type=email],
-    input[type=url],
-    input[type=password]
-      width: 50%
-    input[type=text]:focus,
-    input[type=email]:focus,
-    input[type=url]:focus,
-    input[type=password]:focus,
-    textarea:focus
-      outline: 0
-      border-color: $_color-accent
-    input[type=radio], input[type=radio] + label,
-    input[type=checkbox], input[type=checkbox] + label
-      cursor: pointer
-
     @media screen and (max-width: $_break-point)
       #{&}__field, .field
         margin: 0 0 10px 0
@@ -79,13 +90,3 @@
         > .text,
         > textarea
           width: 100%
-
-      input[type=text],
-      input[type=email],
-      input[type=url],
-      input[type=password],
-      textarea
-        +background-image(linear-gradient(to top, white, white))
-        width: 100%
-      textarea
-        height: 100px
