--- a/elements/_select.sass
+++ b/elements/_select.sass
@@ -18,11 +18,8 @@
       outline: none
       border: none
   &:before
-    +fa('\f0d8')
+    +fa('\f0dc')
     +absolute(0 + ($p/2), $p, 'right')
-  &:after
-    +fa('\f0d7')
-    +absolute(9px + ($p/2), $p, 'right')
 
   select
     width: 110% // IE9
