--- a/mixins/_wrap.sass
+++ b/mixins/_wrap.sass
@@ -1,25 +1,29 @@
-=wrap($n: 960px, $_break-point: 640px, $fit: false, $margin: 10px)
+=wrap($n: 960px, $margin: 10px)
   width: 100%
   margin: 0
   padding: 0
   text-align: center
   min-width: $n
-  @media screen and (max-width: $_break-point)
+  +media(tablet)
+    width: auto
+    min-width: 0
+  +media(mobile)
     width: auto
     min-width: 0
 
   @at-root
     #{&}__inner
+      +border-box
       position: relative
       display: block
       width: $n
       margin: 0 auto
       text-align: left
-      @media screen and (max-width: $_break-point)
-        width: auto
-        @if $fit == true
-          padding-left: 0
-          padding-right: 0
-        @else
-          padding-left: $margin
-          padding-right: $margin
+      +media(tablet)
+        width: 100%
+        padding-left: $margin
+        padding-right: $margin
+      +media(mobile)
+        width: 100%
+        padding-left: $margin
+        padding-right: $margin
